Fix issue with social icons being off-center

--- a/style.css
+++ b/style.css
@@ -1091,6 +1091,10 @@ width: 44%;
 	width: 101%;
 }
 
+.social-footer {
+  max-width: 1140px;
+}
+
 .social-footer a{
 	text-decoration: none;
 	margin-left: 5%;
